Updated leagues menu so it isn't empty

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 Apexpowa Clash Server/node_modules/
 Apexpowa Clash Proxy/node_modules/
+Apexpowa Clash Server/package-lock.json
+Apexpowa Clash Proxy/package-lock.json
